k8s/products/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products
  namespace: ecommerce
spec:
  selector:
    app: products
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
