k8s/products/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: products
  namespace: ecommerce
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`localhost`) && PathPrefix(`/products`)
      middlewares:
        - name: strip-api-prefixes
      services:
        - kind: Service
          name: products
          port: 3001
          scheme: http
